fix back button on safari

--- a/assets/scss/jwplayer.scss
+++ b/assets/scss/jwplayer.scss
@@ -55,38 +55,23 @@
       font-size: 12px !important;
       padding: 5px 10px !important;
       border-radius: 3px !important;
-  }
+    }
 
-  .jwplayer-full {
+    .jwplayer-full {
       display: none !important;
+    }
+
+    .jwplayer-mute {
+      display: block !important;
+    }
   }
 
-  .jwplayer-mute {
-      display: block !important;
-  }
-    // .jw-rplus-forward {
-    //   position: absolute;
-    //   top: 50%;
-    //   opacity: 0;
-    //   right: 40%;
-    //   transform: translateY(-50%);
-    //   // width: 40%;
-    //   // height: 100%;
-    //   // display: flex;
-    //   // vertical-align: middle;
-    //   // align-items: center;
-    //   // border-top-left-radius: 50%;
-    //   // border-bottom-left-radius: 50%;
-    //   // background: #9e9e9e45;
-    //   padding: 50px;
-    //   &.db-tap {
-    //     left: 50px;
-    //     top: 0;
-    //   }
-    // }
+  &.jw-flag-live {
+    .jw-display-icon-rewind {
+      visibility: unset !important;
+    }
   }
 }
-
 
 /*************
 * FadeInRight *
